k8s/controller/pepr-module-pepr-with-argo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pepr-system
  labels:
    pepr.dev: ''
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pepr-pepr-with-argo
  namespace: pepr-system
  annotations:
    pepr.dev/description: pepr-with-argo
  labels:
    app: pepr-pepr-with-argo
    pepr.dev/controller: admission
    pepr.dev/uuid: pepr-with-argo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pepr-pepr-with-argo
      pepr.dev/controller: admission
  template:
    metadata:
      annotations:
        buildTimestamp: '1746815925690'
      labels:
        app: pepr-pepr-with-argo
        pepr.dev/controller: admission
    spec:
      terminationGracePeriodSeconds: 5
      priorityClassName: system-node-critical
      serviceAccountName: pepr-pepr-with-argo
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        fsGroup: 65532
      containers:
        - name: server
          image: ghcr.io/defenseunicorns/pepr/controller:v0.49.0
          imagePullPolicy: IfNotPresent
          args:
            - /app/node_modules/pepr/dist/controller.js
            - 87f3771f51c433617301fe2afb3ac70a4af035be97158a6b11cf7720ebf7e780
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 512Mi
              cpu: 500m
          securityContext:
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/certs
              readOnly: true
            - name: api-path
              mountPath: /app/api-path
              readOnly: true
            - name: module
              mountPath: /app/load
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: pepr-pepr-with-argo-tls
        - name: api-path
          secret:
            secretName: pepr-pepr-with-argo-api-path
        - name: module
          secret:
            secretName: pepr-pepr-with-argo-module
---
apiVersion: v1
kind: Service
metadata:
  name: pepr-pepr-with-argo
  namespace: pepr-system
  labels:
    pepr.dev/controller: admission
spec:
  selector:
    app: pepr-pepr-with-argo
    pepr.dev/controller: admission
  ports:
    - port: 443
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pepr-pepr-with-argo-watcher
  namespace: pepr-system
  labels:
    pepr.dev/controller: watcher
spec:
  selector:
    app: pepr-pepr-with-argo-watcher
    pepr.dev/controller: watcher
  ports:
    - port: 443
      targetPort: 3000
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pepr-pepr-with-argo
webhooks:
  - name: pepr-pepr-with-argo.pepr.dev
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: >-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDdERDQ0FaeWdBd0lCQWdJQkFUQU5CZ2txaGtpRzl3MEJBUXNGQURBY01Sb3dHQVlEVlFRREV4RlFaWEJ5DQpJRVZ3YUdWdFpYSmhiQ0JEUVRBZUZ3MHlOVEExTURreE9ETTRORFZhRncweU5qQTFNRGt4T0RNNE5EVmFNQUF3DQpnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWlF6VmpJNGtuNTFHTWpEY1ExMG5WDQo5cmJMME5rdjU4REVvZFEzbGxwQTUxeTBKMG1sR29yaktDMVRndWY1STRpbGwwTGtrNkpxd0xLOCtSbE1MMHdjDQp4Sml4ZDVFakg2Nk8zUkhqZG15SVlCNU41UHJyZkk4cDJ3WkljMmtMSERwTzNqSTdlR2Y4TDVGTDd1dEYxdEE4DQo3OC94MlVDajRj [...]
      service:
        name: pepr-pepr-with-argo
        namespace: pepr-system
        path: >-
          /mutate/d7960701d20973667065331f05c51ced71db55c2382090de4c616e2e30ffd61a
    failurePolicy: Fail
    matchPolicy: Equivalent
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - pepr-system
    rules:
      - apiGroups:
          - application.pepr.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - webapps
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - pods/ephemeralcontainers
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pepr-pepr-with-argo
webhooks:
  - name: pepr-pepr-with-argo.pepr.dev
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: >-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDdERDQ0FaeWdBd0lCQWdJQkFUQU5CZ2txaGtpRzl3MEJBUXNGQURBY01Sb3dHQVlEVlFRREV4RlFaWEJ5DQpJRVZ3YUdWdFpYSmhiQ0JEUVRBZUZ3MHlOVEExTURreE9ETTRORFZhRncweU5qQTFNRGt4T0RNNE5EVmFNQUF3DQpnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWlF6VmpJNGtuNTFHTWpEY1ExMG5WDQo5cmJMME5rdjU4REVvZFEzbGxwQTUxeTBKMG1sR29yaktDMVRndWY1STRpbGwwTGtrNkpxd0xLOCtSbE1MMHdjDQp4Sml4ZDVFakg2Nk8zUkhqZG15SVlCNU41UHJyZkk4cDJ3WkljMmtMSERwTzNqSTdlR2Y4TDVGTDd1dEYxdEE4DQo3OC94MlVDajRj [...]
      service:
        name: pepr-pepr-with-argo
        namespace: pepr-system
        path: >-
          /validate/d7960701d20973667065331f05c51ced71db55c2382090de4c616e2e30ffd61a
    failurePolicy: Fail
    matchPolicy: Equivalent
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - pepr-system
    rules:
      - apiGroups:
          - application.pepr.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - webapps
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - pods/ephemeralcontainers
    sideEffects: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pepr-pepr-with-argo-watcher
  namespace: pepr-system
  annotations:
    pepr.dev/description: pepr-with-argo
  labels:
    app: pepr-pepr-with-argo-watcher
    pepr.dev/controller: watcher
    pepr.dev/uuid: pepr-with-argo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pepr-pepr-with-argo-watcher
      pepr.dev/controller: watcher
  template:
    metadata:
      annotations:
        buildTimestamp: '1746815925690'
      labels:
        app: pepr-pepr-with-argo-watcher
        pepr.dev/controller: watcher
    spec:
      terminationGracePeriodSeconds: 5
      serviceAccountName: pepr-pepr-with-argo
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        fsGroup: 65532
      containers:
        - name: watcher
          image: ghcr.io/defenseunicorns/pepr/controller:v0.49.0
          imagePullPolicy: IfNotPresent
          args:
            - /app/node_modules/pepr/dist/controller.js
            - 87f3771f51c433617301fe2afb3ac70a4af035be97158a6b11cf7720ebf7e780
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 512Mi
              cpu: 500m
          securityContext:
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/certs
              readOnly: true
            - name: module
              mountPath: /app/load
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: pepr-pepr-with-argo-tls
        - name: module
          secret:
            secretName: pepr-pepr-with-argo-module
